Add codable TaggedProfile (#321)
For intrinsic profile encoding/decoding without Registry. It handles all
known modules as a tagged union. Friendly to Kotlin sealed classes.

Move TaggedProfile, TaggedModule, and VirtualTunnelController to
umbrella target to get access to OpenVPN and WireGuard modules.
